Criação dos metodos de teste e das apis

--- a/CarteirasInvestimento/appsettings.json
+++ b/CarteirasInvestimento/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  
+    "CarteiraInvestimentoSqlite": "Data Source=CarteiraInvestimento.db",
+    "CarteiraInvestimentoSqlServer": "Data Source=CLEITON\\SQLEXPRESS;Initial Catalog=CarteiraInvestimento;Integrated Security=True;Encrypt=False"
+
+
   }
 }
